stravandbota/index.css
/* ... */
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 479px) {
	.title {font-size: 56px}
	button, button:focus {font-size: 22px}
	.content * {font-size: 14px}
	#rankS p, #rankB p {font-size: 17px !important}
	.autoexec {font-size: 19px !important}
	.cross {font-size: 13px}
	
	.logo a img {
		height: 133px;
		width: 800px;
		margin: auto;
		top: -10025px; /* wtf -_- */
		bottom: -9999px;
		left: -9999px;
		right: -9999px;
		border-radius: 0;
		-webkit-transition: none !important;
		-moz-transition: none !important;
		-ms-transition: none !important;
		-o-transition: none !important;
		transition: none !important;
	}
}

/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 386px) {
	#compS span, #compB span {font-size: 13px !important}
	.cross {font-size: 12px}
	.xhair {margin: 6px 6px 0 0}
	.content {margin: 12px 4% 0}
	.note {font-size: 12px}
}

